updated following review comments